# Query_Engine

./: .gitignore  README.md  render.yaml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: engine.rs  main.rs  models.rs
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/scratch/: extract_text.cjs  remove_font_mono.cjs  remove_uppercase.cjs
frontend/src/: App.jsx  index.css
frontend/src/components/: LoadingScreen.jsx  MainLayout.jsx  Sidebar.jsx  TopNav.jsx
frontend/src/views/: AdminDashboardView.jsx  DashboardView.jsx  LandingPageView.jsx  LoginView.jsx  PerformanceView.jsx  QueryEngineView.jsx  StorageView.jsx  UserAuditView.jsx
k8s/: backend.yaml  frontend.yaml
